--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,7 @@
 
 .list-options-hide{
     list-style-type: none;
-    margin: 0px auto 10px;
+    margin: 0 auto 10px;
     text-align: start;
     padding: 0 10px;
     color: #2f2f2f;
@@ -351,7 +351,7 @@
 
 .text-field:focus {
     border-color: #006767;
-    box-shadow: 0 0px 0px rgba(0, 0, 0, 0.075) inset, 0 0 1px 2px #006767;
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0.075) inset, 0 0 1px 2px #006767;
 
 }
 
@@ -463,8 +463,8 @@ td:hover{
     /*font-style: italic;*/
     font-size: 14px;
     text-align: start;
-    margin: 3px auto 0;
-    padding: 0 10px;
+    margin: 0 auto 10px;
+    padding: 5px 10px 0;
 }
 
 .text-danger{
