--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@
         width: 18%;
     }
 
+    .wrap-main .main-hello-text{
+        width: 47%;
+    }
+
     .task-title{
         max-width: 80%;
     }
@@ -105,6 +109,14 @@
 
     .ref-img{
         width: 100%;
+    }
+
+    .wrap-main .main-hello-text{
+        width: 100%;
+    }
+
+    .wrap-main{
+        flex-wrap: wrap;
     }
 }
 
@@ -301,18 +313,18 @@
     border-color: #008a8a;
 }
 
-        .my-blue-btn:hover{
-            background-color: #007575;
-            border-color: #007575;
-        }
+.my-blue-btn:hover{
+    background-color: #007575;
+    border-color: #007575;
+}
 
-        .option-list{
-            width: 100%;
-        }
+.option-list{
+    width: 100%;
+}
 
 
-        .btn-disable{
-            pointer-events: none; /* делаем элемент неактивным для взаимодействия */
+.btn-disable{
+    pointer-events: none; /* делаем элемент неактивным для взаимодействия */
     cursor: default; /*  курсор в виде стрелки */
     color: #e1e1e1 !important;
     background-color: #cb655c;
@@ -358,7 +370,6 @@
 .text-field:focus {
     border-color: #006767;
     box-shadow: 0 0 0 rgba(0, 0, 0, 0.075) inset, 0 0 1px 2px #006767;
-
 }
 
 .main-contact-text{
@@ -376,15 +387,13 @@
     text-decoration: none;
 }
 
-.icons li
-{
+.icons li{
     width: 10vh;
     margin-right: 1em;
     display: inline-block;
 }
 
-.icons
-{
+.icons{
     text-align: center;
     margin-top: 45px;
 }
@@ -423,13 +432,10 @@
     justify-content: space-between;
 }
 
-.wrap-main .main-hello-text{
-    width: 47%;
-}
 
 .btn-bigger{
     font-size: 18px;
-    margin-top: 40px;
+    margin-top: 25px;
     width: 200px;
 }
 
@@ -464,8 +470,7 @@ td:hover{
     padding: 0 10px;
 }
 
-.date-task
-{
+.date-task{
     font-size: 14px;
     text-align: start;
     margin: 0 auto 10px;
@@ -480,14 +485,12 @@ td:hover{
     color: #008a8a !important;
 }
 
-.text-link
-{
+.text-link{
     color: #c9c9c9;
     transition: all .4s ease;
 }
 
-.text-link:hover
-{
+.text-link:hover{
     color:#919191;
     text-decoration: none;
 }
@@ -503,4 +506,8 @@ td:hover{
 
 .ref-text{
     margin: 10px 0;
+}
+
+.btn-wrap-center{
+    text-align: center;
 }
